--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
 <body>
     <h1>THIS IS A TEST</h1>
